--- a/source/test/cfg/intel.cfg
+++ b/source/test/cfg/intel.cfg
@@ -1,38 +1,35 @@
 #
 # Copyright 2013 Formation Data Systems, Inc.
 #
+# Example bring_up.py configuration file
+
 [user]
 user_name       = root
 password        = passwd
+
+# The 'sh' section defines a SH clients parameters. The section must be prefixed
+# with 'sh' but is also used as a unique ID for the client.
+#
+[sh1]
+# Client uses blk services
+#blk             = true
+fds_node        = node1
 
 # The 'node' section defines a nodes paramters. The section must be prefixed
 # with 'node' but is also used as a unique ID for the node.
 #
 [node1]
+# Denotes this node will run an OM
 om              = true
-ip              = localhost
+# IP of the node
+ip              = 10.1.10.16
+# Fds root directory to use
 fds_root        = /fds
-fds_port        = 10000
+# Base port for that node, not needed if we don't run all nodes one physical machine
+fds_port        = 7000
 
 [node2]
-enable          = true
-ip              = localhost
+#enable          = true
+ip              = 10.1.10.17
 fds_root        = /fds
-fds_port        = 10000
-
-[node3]
-enable          = true
-ip              = localhost
-fds_root        = /fds
-fds_port        = 10000
-
-[node4]
-enable          = true
-ip              = localhost
-fds_root        = /fds
-fds_port        = 10000
-
-[sh1]
-# Client uses blk services
-blk             = false
-fds_node        = node1
+fds_port        = 11000
