Stlye checkin all but the StorMgr.cpp file in sm-lib.

--- a/source/stor-mgr/smlib/Makefile
+++ b/source/stor-mgr/smlib/Makefile
@@ -23,14 +23,7 @@ user_cpp          :=                   \
     SMSvcHandler.cpp
 
 user_no_style     := \
-    StorMgr.cpp                        \
-    StorMgrVolumes.cpp                 \
-    ObjRank.cpp                        \
-    ObjStats.cpp                       \
-    TierEngine.cpp                     \
-    TierPutAlgorithms.cpp              \
-    ObjMeta.cpp                        \
-    SmObjDb.cpp                        
+    StorMgr.cpp
 
 user_ar_libs      := fds-smlib
 fds-smlib         := $(user_cpp)
