[WIN-813, WIN-648] Removed dependencies between volumes in AM probe for issuing requests for QoS testing. Can switch this feature off from platform.conf.

--- a/source/config/etc/platform.conf
+++ b/source/config/etc/platform.conf
@@ -260,6 +260,8 @@ fds: {
 	    uturn_amserv_getblob = false
 	    /* Enables probe testing server */
 	    enable_probe = false
+            /* Enable qos testing with probe, will use probe_outstanding_reqs per volume */
+            probe_test_qos = false
 	    /* Number of threads for probe test */
 	    probe_num_threads = 10
         /* Number of max outanding requests */
