Increamental merge from vy-transport to dev. - Generic state machine lib. - Generic tracebuffer lib.

--- a/source/umod-lib/common/Makefile
+++ b/source/umod-lib/common/Makefile
@@ -9,7 +9,8 @@ user_cpp         := \
     fds_stat.cpp \
     fds-shmobj.cpp \
     fds_python_bind.cpp \
-    fdsp_utils.cpp
+    fdsp_utils.cpp \
+    fds-fsm.cpp
 
 user_no_style    := \
     fds_request.cpp \
