Add initial header for object data store.

--- a/source/stor-mgr/include/Makefile
+++ b/source/stor-mgr/include/Makefile
@@ -1,7 +1,7 @@
 topdir         := ../..
 user_target    := lib
 user_rtime_env := user
-user_build_dir :=
+user_build_dir := object-store
 
 user_hh        := $(wildcard *.h)
 user_hpp       := $(wildcard *.hpp)
