--- a/source/stor-mgr/smlib/object-store/Makefile
+++ b/source/stor-mgr/smlib/object-store/Makefile
@@ -5,8 +5,7 @@ user_build_dir    :=
 
 user_incl_dir     := $(topdir) ../../include
 user_cpp_flags    :=
-user_cpp          := \
-        ObjectMetadataStore.cpp
+user_cpp          := $(wildcard *.cpp)
 
 user_ar_libs      := fds-smlib
 fds-smlib         := $(user_cpp)
