--- a/source/util/Makefile
+++ b/source/util/Makefile
@@ -1,10 +1,5 @@
 topdir           := ..
-user_target      := lib
-user_rtime_env   := user
-user_build_dir   := hash
-user_cpp         := $(wildcard *.cpp)
-user_no_style    := $(user_cpp)
-user_ar_libs     := fds-util
-fds-util         := $(user_cpp)
+speedup          := -j 5
+user_build_dir   := hash misc
 
 include $(topdir)/Makefile.incl
