--- a/source/am-engine/Makefile
+++ b/source/am-engine/Makefile
@@ -1,22 +1,5 @@
 topdir           := ..
-user_target      := lib
-user_rtime_env   := user
-user_build_dir   := include handlers amlib
-user_incl_dir    := include $(topdir)/stor-hvisor $(topdir)/fds_client $(topdir)/fds_client/include $(topdir)
-user_ragel       := am-urls.rl
-user_clean       := am-urls.cpp
-user_cpp         :=               \
-    am-engine.cpp \
-    am-plugin.cpp \
-    s3connector.cpp \
-    atmos-connector.cpp \
-    http_utils.cpp \
-    am-urls.cpp \
-    fdsn-server.cpp \
-    am-probe.cpp
-
-user_no_style    := am-urls.cpp
-user_ar_libs     := fds-am-engine
-fds-am-engine    := $(user_cpp) $(user_cc)
+speedup          := -j 5
+user_build_dir   := include handlers amlib misc
 
 include $(topdir)/Makefile.incl
