--- a/source/fds-probe/Makefile
+++ b/source/fds-probe/Makefile
@@ -1,4 +1,5 @@
 topdir         := ..
+speedup        := -j 5
 user_build_dir := common adapters block dataset s3 include
 
 include $(topdir)/Makefile.incl
