--- a/source/net-service/Makefile
+++ b/source/net-service/Makefile
@@ -1,6 +1,7 @@
 topdir           := ..
 user_target      := lib
 user_rtime_env   := user
+speedup          := -j 5
 user_build_dir   := include endpoint svc_request
 user_incl_dir    :=
 
