--- a/source/unit-test/fds-probe/Makefile
+++ b/source/unit-test/fds-probe/Makefile
@@ -1,4 +1,5 @@
 topdir            := ../..
+speedup           := -j 7
 user_build_dir    := s3 thrift pm sm \
     s3-template  \
     blk-template \
