[WIN-911] Separate XDI from bare AM processes

--- a/source/am-app/Makefile
+++ b/source/am-app/Makefile
@@ -60,10 +60,10 @@ user_incl_dir     += $(topdir) \
 
 user_cpp      := $(wildcard *.cpp)
 
-user_ld_flags := -shared -Wl,--no-allow-shlib-undefined
+#user_ld_flags := -shared -Wl,--no-allow-shlib-undefined
 
 user_no_style     := $(user_cc) $(wildcard com_*.h)
-user_bin_exe      := libaccessmgr.so
-libaccessmgr.so   := $(user_cpp) $(user_cc)
+user_bin_exe      := bare_am
+bare_am           := $(user_cpp) $(user_cc)
 
 include $(topdir)/Makefile.incl
