parallelize build of thrift

--- a/thrift-0.9.0/Makefile.fds
+++ b/thrift-0.9.0/Makefile.fds
@@ -1,4 +1,5 @@
 topdir         := ..
+speedup        := -j 5
 user_build_dir := compiler/cpp/src lib/cpp/src/thrift
 
 include $(topdir)/Makefile.incl
