--- a/source/unit-test/Makefile
+++ b/source/unit-test/Makefile
@@ -10,6 +10,7 @@ user_build_dir :=      \
     util               \
     data-mgr           \
     dlt                \
-    migrations
+    migrations         \
+    stor-mgr
 
 include $(topdir)/Makefile.incl
