--- a/source/unit-test/stor-mgr/Makefile
+++ b/source/unit-test/stor-mgr/Makefile
@@ -1,7 +1,7 @@
 topdir            := ../..
 user_target       := test
+user_std_libs     := true
 user_rtime_env    := user
-user_install      := sm_ut.conf
 user_install_loc  := test
 
 user_incl_dir     := \
@@ -13,52 +13,17 @@ user_incl_dir     := \
 user_cpp_flags    :=
 user_fds_so_libs  :=
 user_fds_ar_libs  := \
-    fds-smlib \
-    fds-migrations \
+    fds-smlib     \
     fds-am-engine \
-    fds-sm-plat \
-    fds-plat-lib \
-    fds-lib \
-    fds-dsk-mgnt \
-    fds-umod \
-    fds-dsk-io \
-    fds-thread \
-    fds-util \
-    fds-odb \
-    fds-vpolicy \
-    fds-fdsp \
-    fds-hash \
-    fds-probe-adapters \
-    fds-probe-blk \
-    fds-probe 
-
-user_non_fds_libs := \
-    boost_log \
-    boost_system \
-    boost_filesystem \
-    boost_thread \
-    boost_date_time \
-    boost_program_options \
-    leveldb \
-    ssl \
-    cryptopp \
-    leveldb \
-    fuse \
-    config++ \
-    thrift \
-    hiredis \
-    gmock
+    fds-dsk-io
 
 user_cpp          := \
-	sm_unit_test.cpp \
-	ObjMeta_ut.cpp \
+	object_store_unit_test.cpp
 
 user_no_style     := sm_unit_test.cpp
 user_bin_exe      := \
-	sm_unit_test \
-	ObjMeta_ut \
+    ObjectStoreUnitTest
 
-sm_unit_test      := sm_unit_test.cpp
-ObjMeta_ut	  := ObjMeta_ut.cpp
+ObjectStoreUnitTest := object_store_unit_test.cpp
 
 include $(topdir)/Makefile.incl
