Fix bug in SL: missing peer update from the new node to existing members.

--- a/source/config/etc/platform.conf
+++ b/source/config/etc/platform.conf
@@ -1,6 +1,6 @@
 fds: {
     /* Network interface that all fds nodes should have */
-    nic_if="eth0"
+    nic_if="lo"
 
     /* Use genkey to generate a new one */
     aes_key="005ecbcf2a3ddf8fc634a43b8adb44cc"
