Adding some actual test cases to the obj store unit test.

--- a/source/stor-mgr/include/object-store/Makefile
+++ b/source/stor-mgr/include/object-store/Makefile
@@ -3,6 +3,8 @@ user_target    := lib
 user_rtime_env := user
 user_build_dir :=
 
+user_incl_dir  := $(topdir)/stor-mgr/include
+
 user_hh        := $(wildcard *.h)
 user_hpp       := $(wildcard *.hpp)
 
