WIN-788 No-copy object cache.
SmCache is a zero-copy/threadsafe version of the KvCache. It uses
shared_ptr<T> as its "value_type". Simple unit test added for
WIN-789 which will be completed in a following commit.

--- a/source/unit-test/lib/Makefile
+++ b/source/unit-test/lib/Makefile
@@ -30,6 +30,7 @@ user_cpp          :=  \
     SynchronizedTaskExecutor_ut.cpp \
     perf_trace_unit_test.cpp \
     kvcache_unit_test.cpp \
+    smcache_unit_test.cpp \
     object_logger_test.cpp
 
 user_cc           :=
@@ -56,6 +57,7 @@ user_bin_exe      := \
     trans_journal_ut \
     SynchronizedTaskExecutor_ut \
     perf_trace_unit_test \
+    smcache_unit_test \
     kvcache_unit_test \
     object_logger_test
 
@@ -69,6 +71,7 @@ counters_test                  := counters_test.cpp
 trans_journal_ut               := trans_journal_ut.cpp
 SynchronizedTaskExecutor_ut    := SynchronizedTaskExecutor_ut.cpp
 perf_trace_unit_test           := perf_trace_unit_test.cpp
+smcache_unit_test              := smcache_unit_test.cpp
 kvcache_unit_test              := kvcache_unit_test.cpp
 object_logger_test             := object_logger_test.cpp
 
