trace buffer changes

--- a/source/lib/misc/Makefile
+++ b/source/lib/misc/Makefile
@@ -28,7 +28,8 @@ user_cpp         :=      \
     fds_error.cpp        \
     PerfHistory.cpp      \
     StatsCollector.cpp   \
-    ObjectLogger.cpp
+    ObjectLogger.cpp     \
+    Tracebuffer.cpp
 
 user_incl_dir    := .. $(topdir)
 user_no_style    := \
