--- a/source/unit-test/lib/Makefile
+++ b/source/unit-test/lib/Makefile
@@ -30,7 +30,8 @@ user_cpp          :=  \
     SynchronizedTaskExecutor_ut.cpp \
     perf_trace_unit_test.cpp \
     kvcache_unit_test.cpp \
-    object_logger_test.cpp
+    object_logger_test.cpp \
+    Tracebuffer_ut.cpp
 
 user_cc           :=
 user_no_style     :=                \
@@ -57,7 +58,8 @@ user_bin_exe      := \
     SynchronizedTaskExecutor_ut \
     perf_trace_unit_test \
     kvcache_unit_test \
-    object_logger_test
+    object_logger_test \
+    Tracebuffer_ut
 
 catalog_test                   := catalog_unit_test.cpp
 ocache_unit_test	       := ocache_unit_test.cpp
@@ -71,5 +73,6 @@ SynchronizedTaskExecutor_ut    := SynchronizedTaskExecutor_ut.cpp
 perf_trace_unit_test           := perf_trace_unit_test.cpp
 kvcache_unit_test              := kvcache_unit_test.cpp
 object_logger_test             := object_logger_test.cpp
+Tracebuffer_ut		       := Tracebuffer_ut.cpp
 
 include $(topdir)/Makefile.incl
