[WIN-794] Put processing in ObjectStore

--- a/source/unit-test/stor-mgr/sm_ut.conf
+++ b/source/unit-test/stor-mgr/sm_ut.conf
@@ -46,7 +46,7 @@ fds:
         num_ops=100
 
         /* operation type (does not apply to smoke test) */
-        op_type=0
+        op_type="put"
 
         enable_graphite=false
     }
