work on vol related msg

--- a/source/am-app/platform/Makefile
+++ b/source/am-app/platform/Makefile
@@ -2,9 +2,10 @@ topdir            := ../..
 user_target       := lib
 user_rtime_env    := user
 user_build_dir    :=
-user_incl_dir     := ../include
+user_incl_dir     := $(topdir)/am-engine/include ../include $(topdir) $(topdir)/stor-hvisor $(topdir)/fds_client/include 
 user_cpp_flags    :=
 user_cpp          := \
+        AMSvcHandler.cpp\
 	am-platform.cpp
 
 user_ar_libs      := fds-am-plat
