add resource state

--- a/source/fdsp/Makefile
+++ b/source/fdsp/Makefile
@@ -2,7 +2,7 @@ topdir           := ..
 user_target      := lib
 user_rtime_env   := user
 
-user_thrift      := FDSP.thrift fds_service.thrift fds_stream.thrift snapshot.thrift
+user_thrift      := common.thrift FDSP.thrift fds_service.thrift fds_stream.thrift snapshot.thrift
 user_thrift_loc  := $(topdir)/include/fdsp
 user_thrift_flag := --gen cpp:pure_enums --allow-64bit-consts
 
