HashedLocks implementation win-938

--- a/source/unit-test/lib/Makefile
+++ b/source/unit-test/lib/Makefile
@@ -32,7 +32,8 @@ user_cpp          :=  \
     kvcache_unit_test.cpp \
     Tracebuffer_ut.cpp \
     smcache_unit_test.cpp \
-    object_logger_test.cpp
+    object_logger_test.cpp \
+    HashedLocks_ut.cpp
 
 user_cc           :=
 user_no_style     :=                \
@@ -61,7 +62,8 @@ user_bin_exe      := \
     smcache_unit_test \
     kvcache_unit_test \
     object_logger_test \
-    Tracebuffer_ut
+    Tracebuffer_ut \
+    HashedLocks_ut
 
 catalog_test                   := catalog_unit_test.cpp
 ocache_unit_test	       := ocache_unit_test.cpp
@@ -77,5 +79,6 @@ smcache_unit_test              := smcache_unit_test.cpp
 kvcache_unit_test              := kvcache_unit_test.cpp
 object_logger_test             := object_logger_test.cpp
 Tracebuffer_ut		       := Tracebuffer_ut.cpp
+HashedLocks_ut		       := HashedLocks_ut.cpp
 
 include $(topdir)/Makefile.incl
