--- a/source/config/etc/platform.conf
+++ b/source/config/etc/platform.conf
@@ -144,6 +144,12 @@ fds: {
 	    default_vol_max_cache_size = 256
 	    /* Default min per-volume cache size in SM in MB */
 	    default_vol_min_cache_size = 8
+
+	    /* Default max number of data cache entries */
+	    default_data_entries = 200;
+
+	    /* Default max number of metadata entries */
+	    default_meta_entries = 500;
 	}
 
 	qos: {
