Fixes in trace buffer based on Vy's comments

--- a/source/umod-lib/common/Makefile
+++ b/source/umod-lib/common/Makefile
@@ -10,7 +10,8 @@ user_cpp         := \
     fds-shmobj.cpp \
     fds_python_bind.cpp \
     fdsp_utils.cpp \
-    fds-fsm.cpp
+    fds-fsm.cpp \
+    Tracebuffer.cpp
 
 user_no_style    := \
     fds_request.cpp \
