--- a/source/config/etc/platform.conf
+++ b/source/config/etc/platform.conf
@@ -137,6 +137,11 @@ fds: {
         /* verify data */
         data_verify = true
 
+	objectstore: {
+	    /* Size of the hashed task synchronizer */
+	    synchronizer_size = 500
+        }
+
 	cache: {
 	    /* Default max size of the cache in SM in MB */
 	    default_cache_size = 256
