Added ObjectMetaCache load testing to metastore_unit_test

--- a/source/unit-test/stor-mgr/sm_ut.conf
+++ b/source/unit-test/stor-mgr/sm_ut.conf
@@ -2,6 +2,13 @@ fds:
 {
     /* fds root prefix */
     root = ""
+    sm:
+    {
+        cache:
+        {
+            default_meta_entries = 5000
+        }
+    }
     sm_ut:
     {
 	/* Log file */
@@ -30,11 +37,11 @@ fds:
 	/* Log severity */
         log_severity="debug"
 
-        /* type of test  */
+        /* type of test: smoke, load  */
         test_type="smoke"
 
-        /* type of object to test */
-        test_what="db"
+        /* type of object to test: meta_store, meta_db, meta_cache */
+        test_what="meta_db"
 
         /* number of threads (does not apply to smoke test) */
         num_threads=10
