--- a/source/java/pom.xml
+++ b/source/java/pom.xml
@@ -9,6 +9,7 @@
     <url>http://www.formationds.com</url>
     <properties>
         <encoding>UTF-8</encoding>
+      <togglz.version>2.0.1.Final</togglz.version>
     </properties>
 
     <dependencies>
@@ -152,6 +153,25 @@
             <artifactId>bcprov-ext-jdk15on</artifactId>
             <version>1.51</version>
         </dependency>
+
+      <!-- SNAPSHOT Dependency -->
+      <dependency>
+        <groupId>org.mnode.ical4j</groupId>
+        <artifactId>ical4j</artifactId>
+        <version>1.0.2</version>
+      </dependency>
+
+      <!-- Togglz Dependencies -->
+      <dependency>
+        <groupId>org.togglz</groupId>
+        <artifactId>togglz-core</artifactId>
+        <version>${togglz.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.togglz</groupId>
+        <artifactId>togglz-console</artifactId>
+        <version>${togglz.version}</version>
+      </dependency>
     </dependencies>
 
     <!--mvn -f distrib.xml -DskipTests clean assembly:directory-->
