--- a/.gitignore
+++ b/.gitignore
@@ -71,3 +71,6 @@ source/java/${build.dir}/
 ycm.flags
 source/java/null
 source/java/target
+source/am-engine/misc/build.linux-x86_64
+source/unit-test
+source/am-engine
