fixed comment typo

--- a/source/config/etc/fds-features.conf
+++ b/source/config/etc/fds-features.conf
@@ -23,5 +23,5 @@ SNAPSHOT_ENDPOINT = true
 # The feature 'USER_PROVIDER' is enabled, only one can be enabled at a time
 JAAS_USER = false
 
-# The feature for returing duimmy daya when capping the snapshot apis
-USE_CANNED = true
+# The feature for returning dummy data when capping the snapshot apis
+USE_CANNED = false
