--- a/source/unit-test/stor-mgr/sm_ut.conf
+++ b/source/unit-test/stor-mgr/sm_ut.conf
@@ -4,9 +4,15 @@ fds:
     root = ""
     sm:
     {
+        data_verify=false
+        objectstore:
+        {
+            synchronizer_size=100
+	}
         cache:
         {
-            default_meta_entries = 5000
+            default_meta_entries = 0
+	    default_data_entries = 0
         }
     }
     sm_ut:
@@ -51,6 +57,33 @@ fds:
 
         /* number of operations */
         num_ops=100
+
+        /* operation type (does not apply to smoke test) */
+        op_type="put"
+
+        enable_graphite=false
+    }
+    store_load:
+    {
+	/* Log file */
+	logfile="objstore_load.log"
+
+	/* Log severity */
+        log_severity="notification"
+
+        /* type of object to test: object_store */
+        test_what="object_store"
+
+        object_size=4096
+
+        /* number of threads (does not apply to smoke test) */
+        num_threads=30
+
+        /* dataset size in number of objects */
+        dataset_size=100000
+
+        /* number of operations */
+        num_ops=100000
 
         /* operation type (does not apply to smoke test) */
         op_type="put"
