Hookup the new V2 functions to the SM object store. Toggle is still calling old stuff.

--- a/source/config/etc/platform.conf
+++ b/source/config/etc/platform.conf
@@ -192,7 +192,7 @@ fds: {
             cold_threshold = 0
 
             /* Exercise a new ObjectManager stubs */
-            exec_new_stubs=false;
+            exec_new_stubs=false
         }
         threadpool: {
             max_task    = 10
