Add test library to build stand-alone test app. The test app has FDS platform runtime environment to run with FDS modules. The test app can inherit from the ProbeProcess which provide it the probe front-end.

--- a/source/fds-probe/adapters/Makefile
+++ b/source/fds-probe/adapters/Makefile
@@ -7,7 +7,7 @@ user_cpp         := \
     pm-probe.cpp \
     sm-probe.cpp
 
-user_ar_libs       := fds-probe-adapters
-fds-probe-adapters := $(user_cpp)
+user_ar_libs     := fds-probe
+fds-probe        := $(user_cpp)
 
 include $(topdir)/Makefile.incl
