--- a/source/fds-probe/common/Makefile
+++ b/source/fds-probe/common/Makefile
@@ -2,7 +2,9 @@ topdir           := ../..
 user_target      := lib
 user_rtime_env   := user
 user_build_dir   :=
-user_incl_dir    := ../include /usr/include/fuse
+user_incl_dir    := \
+	../include /usr/include/fuse
+
 user_cpp         :=               \
     fds-probe.cpp \
     js-object.cpp \
