--- a/source/unit-test/fds-probe/Makefile.svc
+++ b/source/unit-test/fds-probe/Makefile.svc
@@ -5,16 +5,21 @@ user_rtime_env    := user
 
 user_incl_dir     += \
     $(topdir)/fds-probe/include \
+	$(topdir)/platform/include \
+	$(topdir)/am-app/include \
     $(topdir)/am-engine
 
 user_cpp_flags    +=
 user_fds_so_libs  +=
 user_fds_ar_libs  +=  \
+    fds-probe-ut \
+    fds-plat-daemon \
     fds-probe \
     fds-am-engine \
     fds-am-plat \
     fds-dsk-io \
     fds-dsk-mgnt \
+    fds-plat-disk \
     fds-hash
 
 local_nginx_libs   :=  \
@@ -24,13 +29,14 @@ local_nginx_libs   :=  \
     ngx-event \
     ngx-core \
     ngx-os \
-    ngx-core \
-    pthread crypt pcre crypto z
+    ngx-core
 
 user_non_fds_libs +=  \
     jansson \
-    rt \
-    cryptopp \
-    $(local_nginx_libs)
+	udev \
+	parted \
+    $(local_nginx_libs) \
+    pthread crypt pcre crypto \
+	z cryptopp 
 
 include $(topdir)/Makefile.incl
