--- a/source/unit-test/fds-probe/s3-template/Makefile
+++ b/source/unit-test/fds-probe/s3-template/Makefile
@@ -4,14 +4,13 @@ user_incl_dir     :=
 user_json         := o.json
 user_cpp_flags    :=
 user_fds_so_libs  :=
-user_fds_ar_libs  := \
-    fds-am-engine
+user_fds_ar_libs  := 
 user_non_fds_libs :=
 
-user_hh           := $(wildcard *.h)
-
 # Don't do style check on auto gen code.
+user_hh           := $(wildcard *.h)
 user_no_style     := $(patsubst %.json,%.h,$(user_json))
+
 user_cc           := ngx_modules.c
 user_cpp          := \
     mod-main.cpp \
@@ -20,4 +19,4 @@ user_cpp          := \
 user_bin_exe      := example-s3
 example-s3        := $(user_cpp) $(user_cc)
 
-include $(probe_topdir)/Makefile.s3
+include $(probe_topdir)/Makefile.svc
