Twiddle the UI build bits to avoid using sudo and
clean up a bit.  (Requested by Nate)

Signed-off-by: Donavan Nelson <donavan@formationds.com>

--- a/source/java/Makefile
+++ b/source/java/Makefile
@@ -23,9 +23,12 @@ include $(topdir)/Makefile.incl
 compile:
 	@rm -f $(comm_dir_bin)/AMAgent
 	@rm -rf $(comm_dir_lib)/java
+	@rm -rf $(comm_dir_lib)/admin-webapp
 	@mkdir -p $(comm_dir_lib)/java/
 	@mvn install -f thrift-pom.xml
 	@mvn -DskipTests assembly:directory -Dbuild.dir=$(comm_dir_lib)/java
-	@mkdir $(comm_dir_lib)/admin-webapp;cd admin-webapp;sudo npm install;bower install;grunt release;
+	@mkdir $(comm_dir_lib)/admin-webapp
+	#@cd admin-webapp; npm install; npm install bower; CI=true node_modules/bower/bin/bower install; node_modules/grunt-cli/bin/grunt release
+	@cd admin-webapp; npm install; CI=true node_modules/bower/bin/bower install; node_modules/grunt-cli/bin/grunt release
 	@cp -r admin-webapp/app/* $(comm_dir_lib)/admin-webapp
 	@cp -r demo $(comm_dir_lib)
