--- a/source/lib/Makefile
+++ b/source/lib/Makefile
@@ -1,5 +1,5 @@
 topdir           := ..
 speedup          := -j 5
-user_build_dir   := blob net concurrency kvstore crypto native misc
+user_build_dir   := blob net concurrency kvstore crypto native misc leveldb
 
 include $(topdir)/Makefile.incl
