Fix bug in the automation tool to generate adapter code for probe.

--- a/source/unit-test/fds-probe/s3-template/Makefile
+++ b/source/unit-test/fds-probe/s3-template/Makefile
@@ -9,12 +9,12 @@ user_non_fds_libs :=
 
 # Don't do style check on auto gen code.
 user_hh           := $(wildcard *.h)
-user_no_style     := $(patsubst %.json,%.h,$(user_json))
+user_no_style     := $(patsubst %.json,%.h,$(user_json) adapter.h)
 
 user_cc           := ngx_modules.c
 user_cpp          := \
-    mod-main.cpp \
-    template_probe.cpp
+    test-main.cpp \
+    adapter.cpp
 
 user_bin_exe      := example-s3
 example-s3        := $(user_cpp) $(user_cc)
