Check in real SM with probe front-end example for Mateo.

--- a/source/unit-test/fds-probe/Makefile
+++ b/source/unit-test/fds-probe/Makefile
@@ -5,6 +5,7 @@ user_build_dir    := \
     s3           \
     thrift       \
     pm sm        \
+    sm-embed     \
     s3-template  \
     blk-template \
     threadpool   \
