[WIN-976] Suport SSL

--- a/source/config/etc/platform.conf
+++ b/source/config/etc/platform.conf
@@ -1,11 +1,19 @@
 fds: {
     /* Network interface that all fds nodes should have */
-    nic_if="eth0"
+    
+    nic_if="wlan0"
 
     /* Use genkey to generate a new one */
     aes_key="005ecbcf2a3ddf8fc634a43b8adb44cc"
 
     authentication=true
+
+    ssl: {
+	/* path relative to fds_root */
+	keystore_path="etc/ssl/dev/keystore"
+        keystore_password="exotic sparrow"
+	keymanager_password="exotic sparrow"
+    }
 
     plat: {
         /* process id */
@@ -215,7 +223,8 @@ fds: {
 	om_config_port = 8903
         enable_graphite = false
 
-        s3_port=8000
+        s3_http_port=8000
+        s3_https_port=8443
         swift_port=9999
 	memory_backend=false
 	nbd_server_port = 10809
@@ -285,8 +294,8 @@ fds: {
         placement_algo="ConsistHash"
 
         web_dir="../lib/admin-webapp/"
-        admin_webapp_port=7777
-
+        http_port=7777
+	https_port=7443
         configdb : {
             port=6379
         }
