[WIN-976] Suport SSL

--- a/source/config/etc/platform.conf
+++ b/source/config/etc/platform.conf
@@ -1,11 +1,18 @@
 fds: {
     /* Network interface that all fds nodes should have */
-    nic_if="lo"
+    nic_if="wlan0"
 
     /* Use genkey to generate a new one */
     aes_key="005ecbcf2a3ddf8fc634a43b8adb44cc"
 
     authentication=false
+
+    ssl: {
+	/* path relative to fds_root */
+	keystore_path="etc/ssl/dev/keystore"
+        keystore_password="exotic sparrow"
+	keymanager_password="exotic sparrow"
+    }
 
     plat: {
         /* process id */
@@ -59,9 +66,6 @@ fds: {
 
         /* commit log size */
         commit_log_size = 5242880
-
-        tvc_log_file_size = 20971520
-        tvc_log_max_files = 10
 
         /* process id */
         id      = "dm"
@@ -137,11 +141,6 @@ fds: {
         /* verify data */
         data_verify = true
 
-	objectstore: {
-	    /* Size of the hashed task synchronizer */
-	    synchronizer_size = 500
-        }
-
 	cache: {
 	    /* Default max size of the cache in SM in MB */
 	    default_cache_size = 256
@@ -149,12 +148,6 @@ fds: {
 	    default_vol_max_cache_size = 256
 	    /* Default min per-volume cache size in SM in MB */
 	    default_vol_min_cache_size = 8
-
-	    /* Default max number of data cache entries */
-	    default_data_entries = 200;
-
-	    /* Default max number of metadata entries */
-	    default_meta_entries = 500;
 	}
 
 	qos: {
@@ -190,9 +183,6 @@ fds: {
             hot_threshold = 3
             /* approx number of times an obj has to be accessed to become cold */
             cold_threshold = 0
-
-            /* Exercise a new ObjectManager stubs */
-            exec_new_stubs=true
         }
         threadpool: {
             max_task    = 10
@@ -232,7 +222,8 @@ fds: {
 	om_config_port = 8903
         enable_graphite = false
 
-        s3_port=8000
+        s3_http_port=8000
+        s3_https_port=8443
         swift_port=9999
 	memory_backend=false
 	nbd_server_port = 10809
@@ -277,8 +268,6 @@ fds: {
 	    uturn_amserv_getblob = false
 	    /* Enables probe testing server */
 	    enable_probe = false
-            /* Enable qos testing with probe, will use probe_outstanding_reqs per volume */
-            probe_test_qos = false
 	    /* Number of threads for probe test */
 	    probe_num_threads = 10
         /* Number of max outanding requests */
@@ -304,8 +293,8 @@ fds: {
         placement_algo="ConsistHash"
 
         web_dir="../lib/admin-webapp/"
-        admin_webapp_port=7777
-
+        http_port=7777
+	https_port=7443
         configdb : {
             port=6379
         }
