Added back entries to platform.conf that were removed by other checkin (probably due to merge)

--- a/source/config/etc/platform.conf
+++ b/source/config/etc/platform.conf
@@ -1,6 +1,6 @@
 fds: {
     /* Network interface that all fds nodes should have */
-    nic_if="wlan0"
+    nic_if="eth0"
 
     /* Use genkey to generate a new one */
     aes_key="005ecbcf2a3ddf8fc634a43b8adb44cc"
@@ -141,6 +141,11 @@ fds: {
         /* verify data */
         data_verify = true
 
+	objectstore: {
+	    /* Size of the hashed task synchronizer */
+            synchronizer_size = 500
+        }
+
 	cache: {
 	    /* Default max size of the cache in SM in MB */
 	    default_cache_size = 256
@@ -148,6 +153,10 @@ fds: {
 	    default_vol_max_cache_size = 256
 	    /* Default min per-volume cache size in SM in MB */
 	    default_vol_min_cache_size = 8
+            /* Default max number of data cache entries */
+            default_data_entries = 200
+            /* Default max number of metadata entries */
+            default_meta_entries = 500;
 	}
 
 	qos: {
@@ -183,6 +192,8 @@ fds: {
             hot_threshold = 3
             /* approx number of times an obj has to be accessed to become cold */
             cold_threshold = 0
+            /* Exercise a new ObjectManager stubs */
+            exec_new_stubs=true
         }
         threadpool: {
             max_task    = 10
@@ -268,6 +279,8 @@ fds: {
 	    uturn_amserv_getblob = false
 	    /* Enables probe testing server */
 	    enable_probe = false
+            /* Enable qos testing with probe, will use probe_outstanding_reqs per volume */
+            probe_test_qos = false
 	    /* Number of threads for probe test */
 	    probe_num_threads = 10
         /* Number of max outanding requests */
