Added back tvc related entries to platform.conf which were accidentally removed because of a merge.

--- a/source/config/etc/platform.conf
+++ b/source/config/etc/platform.conf
@@ -67,6 +67,9 @@ fds: {
         /* commit log size */
         commit_log_size = 5242880
 
+        tvc_log_file_size = 20971520
+        tvc_log_max_files = 10
+
         /* process id */
         id      = "dm"
         no_om   = false;
