Cleaning up snapshot Also fixed a exception caused by Status Model Object changes

--- a/source/java/src/resources/fds-commons-model.properties
+++ b/source/java/src/resources/fds-commons-model.properties
@@ -40,3 +40,8 @@ fds.feature.system.management = System Management
 fds.feature.volume.management = Volume Management
 fds.feature.tenant.management = Tenant Management
 fds.feature.user.management = User Management
+
+ical.missing.token = Missing expected token, last token: %s
+ical.parse.error = Bad formatted iCal element - %s
+ical.missing.freq = A recurrence rule MUST contain a FREQ rule part.
+ical.invalid.freq = Invalid FREQ rule part '{0}' in recurrence rule
