Various corrections to existing test cases and added a few new test cases.

--- a/source/test/testsuites/BuildSmokeTest.ini
+++ b/source/test/testsuites/BuildSmokeTest.ini
@@ -10,3 +10,8 @@ iterations: 1
 
 # Parameters for the test suite. fds_config_file is required.
 fds_config_file: /home/greg/fds-src/source/test/cfg/BuildSmokeTest.cfg
+
+# fds_source_dir is required if you want to run from a development
+# environment and you are not starting the test from your ~/source
+# directory or some sub-directory.
+fds_source_dir: /home/greg/fds-src/source
