Remove legacy/broken odb test. Move dlt test to lib directory. Create include directory for common headers.

--- a/source/unit-test/lib/Makefile
+++ b/source/unit-test/lib/Makefile
@@ -17,6 +17,9 @@ user_incl_dir     := \
     $(topdir)/lib    \
     $(topdir)/util
 
+user_build_dir    := \
+    dlt
+
 user_cpp_flags    := 
 user_cpp          :=  \
     fds_timer_test.cpp \
