[WIN-902][WIN-903][WIN-904][WIN-1032] Smoke test uses official Amazon SDK + SSL + authentication

--- a/source/config/etc/platform.conf
+++ b/source/config/etc/platform.conf
@@ -1,11 +1,11 @@
 fds: {
     /* Network interface that all fds nodes should have */
-    nic_if="eth0"
+    nic_if="wlan0"
 
     /* Use genkey to generate a new one */
     aes_key="005ecbcf2a3ddf8fc634a43b8adb44cc"
 
-    authentication=false
+    authentication=true
 
     ssl: {
 	/* path relative to fds_root */
