Authentication should be off by default for now

--- a/source/config/etc/platform.conf
+++ b/source/config/etc/platform.conf
@@ -5,7 +5,7 @@ fds: {
     /* Use genkey to generate a new one */
     aes_key="005ecbcf2a3ddf8fc634a43b8adb44cc"
 
-    authentication=true
+    authentication=false
 
     ssl: {
 	/* path relative to fds_root */
