--- a/source/config/etc/platform.conf
+++ b/source/config/etc/platform.conf
@@ -64,11 +64,9 @@ fds: {
             enable=true
         }
 
-        /* commit log size */
-        commit_log_size = 5242880
-
-        tvc_log_file_size = 20971520
-        tvc_log_max_files = 10
+        catalog_write_buffer_size = 52428800
+        catalog_cache_size = 16777216
+        catalog_log_max_files = 5
 
         /* process id */
         id      = "dm"
