More unit testing; Rename of DataConnectionType to ConnectType

--- a/source/java/src/resources/fds-commons-model.properties
+++ b/source/java/src/resources/fds-commons-model.properties
@@ -32,9 +32,9 @@ node.svc.access.manager = Access Manager
 node.svc.orchestrator.manager = Orchestrator Manager
 node.svc.general.manager = General Manager
 
-data.connector.block.type = Block;
-data.connector.object.type = Object;
-data.connector.unknown.type = Unknown;
+connector.block.type = Block;
+connector.object.type = Object;
+connector.unknown.type = Unknown;
 
 fds.feature.system.management = System Management
 fds.feature.volume.management = Volume Management
