--- a/source/java/admin-webapp/package.json
+++ b/source/java/admin-webapp/package.json
@@ -8,6 +8,8 @@
     "mongodb": "*"
   },
   "devDependencies": {
+    "bower": "",
+    "grunt-cli": "",
     "grunt": "^0.4.5",
     "grunt-contrib-clean": "",
     "grunt-contrib-concat": "",
