--- a/source/java/Makefile
+++ b/source/java/Makefile
@@ -7,7 +7,7 @@ user_thrift       := $(topdir)/fdsp/FDSP.thrift $(topdir)/apis/apis.thrift $(top
 user_thrift_flag  := -r --gen java
 
 user_postdep      := compile
-user_install      := orchMgr xdiSmokeTest AMAgent genkey
+user_install      := orchMgr AMAgent genkey
 user_install_loc  := exe
 user_clean        := \
 	target \
@@ -32,3 +32,4 @@ compile:
 	@cd admin-webapp; npm install; CI=true node_modules/bower/bin/bower install; node_modules/grunt-cli/bin/grunt release
 	@cp -r admin-webapp/app/* $(comm_dir_lib)/admin-webapp
 	@cp -r demo $(comm_dir_lib)
+	@cp smokeTest $(main_dir_tools)
