--- a/docker/spoon-fds/Dockerfile
+++ b/docker/spoon-fds/Dockerfile
@@ -1,7 +1,7 @@
 FROM ubuntu:14.04
 
 RUN locale-gen en_US.UTF-8
-RUN apt-get update #20140924
+RUN apt-get update #20140926
 RUN apt-get -y purge openjdk*
 RUN apt-get install -y python-software-properties software-properties-common python-setuptools
 RUN add-apt-repository -y ppa:webupd8team/java
@@ -15,7 +15,10 @@ RUN apt-get -y install git python3-distupgrade gdb build-essential \
   python-dev python-pip python-boto libpcre3-dev libpcre3 libssl-dev libfuse-dev \
   libevent-dev bison flex ragel ccache libboost-log1.54-dev libboost-program-options1.54-dev \
   libboost-timer1.54-dev libboost-thread1.54-dev libboost-regex1.54-dev libical-dev libical1 \
-  libleveldb-dev
+  libleveldb-dev python-yaml libyaml-dev host libncurses-dev npm nodejs ruby ruby-sass
+
+# We symlink in support of tools expecting a node binary
+RUN ln -s /usr/bin/nodejs /usr/bin/node
 
 # FDS Packages
 RUN wget -O - http://coke.formationds.com:8000/fds.repo.gpg.key 2>/dev/null | apt-key add -
@@ -32,9 +35,11 @@ RUN echo oracle-java8-installer shared/accepted-oracle-license-v1-1 select true 
 RUN apt-get -y install oracle-java8-installer
 ENV JAVA_HOME /usr/lib/jvm/java-8-oracle/
 
-# Extras
-RUN apt-get -y install libyaml-dev host libncurses-dev npm nodejs ruby ruby-sass
-RUN ln -s /usr/bin/nodejs /usr/bin/node
+# Test deps
+RUN pip install unittest-xml-reporting
+
+# FDS Console deps
+RUN pip install thrift
 
 # Tmux
 RUN wget http://downloads.sourceforge.net/tmux/tmux-1.9a.tar.gz
@@ -43,7 +48,7 @@ RUN cd tmux-1.9a && ./configure && make install
 RUN rm -r /tmux-1.9a*
 
 RUN mkdir -p /etc/service
-ADD resources /etc/service/ssh
+ADD runit-ssh /etc/service/ssh
 ADD runit /etc/runit
 
 RUN mkdir -p /var/run/sshd
@@ -63,11 +68,12 @@ RUN pip install --upgrade --user git+git://github.com/Lokaltog/powerline
 USER root
 
 RUN touch /tmp/.devsetup.chk
+RUN chmod 777 /tmp/.devsetup.chk
 RUN mkdir /root/.ssh
 RUN chmod 700 /root/.ssh
-ADD ssh/id_rsa.pub /root/.ssh/authorized_keys
-ADD ssh/config /root/.ssh/config
-ADD profile/java.sh /etc/profile.d/java.sh
+ADD resources/ssh/id_rsa.pub /root/.ssh/authorized_keys
+ADD resources/ssh/config /root/.ssh/config
+ADD resources/profile.d/java.sh /etc/profile.d/java.sh
 
 RUN mkdir /home/pairing/projects
 RUN chown pairing /home/pairing/projects
