Make DM cache size platform.conf configurable.

--- a/source/config/etc/platform.conf
+++ b/source/config/etc/platform.conf
@@ -80,6 +80,11 @@ fds: {
         /* Log severity */
         log_severity = "trace"
 
+	cache: {
+	    /* Default max entries in a volume's DM catalog cache */
+	    default_max_entries = 200
+	}
+
         /* Graphite is enabled or not */
         enable_graphite = false
         graphite: {
