Enable SM to run standalone for unit/perf testing

--- a/source/config/etc/platform.conf
+++ b/source/config/etc/platform.conf
@@ -171,6 +171,9 @@ fds: {
         test_mode=false
 	    /* Internal testing related info */
 	testing: {
+            /* enable if testing SM standalone, no dependency on platform and OM */
+            standalone = false
+
             /* General testing mode...should depricate */
             test_mode = false
 
