Fix dependencies among library modules. - Move most logic out of module constructor. - Do works in mod_init() method to follow module flow. - Fix win-1044 to enable platform module to work with probe embeded inside a service (SM).

--- a/source/Makefile
+++ b/source/Makefile
@@ -33,4 +33,8 @@ user_build_dir :=                       \
     unit-test                           \
     checker                             
 
+ifdef SKIP_JAVA_BUILD
+	user_build_dir := $(filter-out java, $(user_build_dir))
+endif
+
 include $(topdir)/Makefile.incl
