More changes for standalone SM.

--- a/source/unit-test/stor-mgr/sm_ut.conf
+++ b/source/unit-test/stor-mgr/sm_ut.conf
@@ -15,6 +15,10 @@ fds:
             default_meta_entries = 0
 	    default_data_entries = 0
         }
+        testing: {
+            /* enable if testing SM standalone, no dependency on platform and OM */
+            standalone = true
+        }
     }
     diskmap_ut:
     {
