Fixed bug with catalog journal for snapshots. Also added unit test for volume catalog.

--- a/source/unit-test/Makefile
+++ b/source/unit-test/Makefile
@@ -8,6 +8,7 @@ user_build_dir :=      \
     umod-lib           \
     util               \
     migrations         \
-    stor-mgr
+    stor-mgr           \
+    data-mgr
 
 include $(topdir)/Makefile.incl
